--- a/MDK-ARM/TIVA_MPU6050_KEIL.build_log.htm
+++ b/MDK-ARM/TIVA_MPU6050_KEIL.build_log.htm
@@ -3,53 +3,89 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.23.0.0
+IDE-Version: µVision V5.24.2.0
 Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: tri phan, minhtri, LIC=ATTBS-LRTMD-H8VFS-LCJU3-SJ4CN-SN6AS
+License Information: tri phan, minhtri, LIC=VGX30-BNL42-SYIVA-1PB8N-65JI2-NDTLS
  
 Tool Versions:
-Toolchain:       MDK-ARM Plus  Version: 5.23
+Toolchain:       MDK-ARM Plus  Version: 5.24.1
 Toolchain Path:  D:\Software\Keil_v5\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.06 update 4 (build 422)
-Assembler:       Armasm.exe V5.06 update 4 (build 422)
-Linker/Locator:  ArmLink.exe V5.06 update 4 (build 422)
-Library Manager: ArmAr.exe V5.06 update 4 (build 422)
-Hex Converter:   FromElf.exe V5.06 update 4 (build 422)
-CPU DLL:         SARMCM3.DLL V5.23
-Dialog DLL:      DCM.DLL V1.15.0.0
+C Compiler:      Armcc.exe V5.06 update 5 (build 528)
+Assembler:       Armasm.exe V5.06 update 5 (build 528)
+Linker/Locator:  ArmLink.exe V5.06 update 5 (build 528)
+Library Manager: ArmAr.exe V5.06 update 5 (build 528)
+Hex Converter:   FromElf.exe V5.06 update 5 (build 528)
+CPU DLL:         SARMCM3.DLL V5.24.1
+Dialog DLL:      DCM.DLL V1.16.0.0
 Target DLL:      lmidk-agdi.dll V???
-Dialog DLL:      TCM.DLL V1.27.0.0
+Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\OneDrive\workspace_keil\TIVA_MPU6050_KEIL\MDK-ARM\TIVA_MPU6050_KEIL.uvprojx
-Project File Date:  08/09/2017
+Project File Date:  10/14/2017
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Software\Keil_v5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Software\Keil_v5\ARM\ARMCC\Bin'
 Build target 'TIVA MPU6050'
 compiling main.c...
-..\Source\main.c(80): warning:  #111-D: statement is unreachable
+..\Source\main.c(78): warning:  #111-D: statement is unreachable
   	return 0;
-..\Source\main.c: 1 warning, 0 errors
+..\Source\main.c(31): warning:  #177-D: variable "u8_Buf"  was declared but never referenced
+  static uint8_t u8_Buf[50];
+..\Source\main.c: 2 warnings, 0 errors
 compiling MPU6050.c...
-..\Source\MPU6050.c(277): warning:  #550-D: variable "gyroZ"  was set but never used
-      double gyroX, gyroY, gyroZ;
-..\Source\MPU6050.c: 1 warning, 0 errors
+..\Source\MPU6050.c(264): warning:  #167-D: argument of type "volatile int16_t *" is incompatible with parameter of type "int16_t *"
+          MPU6050_Get_Gyro_Raw(i16_Gyro);
+..\Source\MPU6050.c(314): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+      gyroXrate = gyroX / 16.4; // Convert to deg/s
+..\Source\MPU6050.c(315): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+      gyroYrate = gyroY / 16.4; // Convert to deg/s
+..\Source\MPU6050.c(367): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+      compAngleX = 0.93 * (compAngleX + gyroXrate * 
+t_update) + 0.07 * roll; // Calculate the angle using a Complimentary filter
+..\Source\MPU6050.c(368): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+      compAngleY = 0.93 * (compAngleY + gyroYrate * 
+t_update) + 0.07 * pitch;
+..\Source\MPU6050.c(378): warning:  #223-D: function "WriteSerial" declared implicitly
+      WriteSerial(u8_Buf,strlen((char*)u8_Buf));
+..\Source\MPU6050.c(378): warning:  #223-D: function "strlen" declared implicitly
+      WriteSerial(u8_Buf,strlen((char*)u8_Buf));
+..\Source\MPU6050.c(287): warning:  #550-D: variable "gyroZ"  was set but never used
+      static float gyroX, gyroY, gyroZ;
+..\Source\MPU6050.c(40): warning:  #177-D: variable "f_Q_angle"  was declared but never referenced
+  static float f_Q_angle = 0.001f;
+..\Source\MPU6050.c(41): warning:  #177-D: variable "f_Q_bias"  was declared but never referenced
+  static float f_Q_bias = 0.003f;
+..\Source\MPU6050.c(42): warning:  #177-D: variable "f_R_measure"  was declared but never referenced
+  static float f_R_measure = 0.03f;
+..\Source\MPU6050.c(43): warning:  #550-D: variable "f_angle"  was set but never used
+  static float f_angle = 0.0f; // Reset the angle
+..\Source\MPU6050.c(44): warning:  #177-D: variable "f_bias"  was declared but never referenced
+  static float f_bias = 0.0f; // Reset bias
+..\Source\MPU6050.c(45): warning:  #177-D: variable "f_rate"  was declared but never referenced
+  static float f_rate = 0.0f;
+..\Source\MPU6050.c(46): warning:  #177-D: variable "f_P"  was declared but never referenced
+  static float f_P[2][2];
+..\Source\MPU6050.c(51): warning:  #177-D: variable "i32_CalibAccel"  was declared but never referenced
+  static int32_t i32_CalibAccel[3] = {0, 0, 0};
+..\Source\MPU6050.c(76): warning:  #177-D: function "Kalman_Get_Angle"  was declared but never referenced
+  static float Kalman_Get_Angle(float newAngle, float newRate, float dt);
+..\Source\MPU6050.c: 17 warnings, 0 errors
 linking...
-Program Size: Code=11548 RO-data=2388 RW-data=1644 ZI-data=676  
-".\TIVA_MPU6050_KEIL.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=10928 RO-data=2392 RW-data=1644 ZI-data=756  
+".\TIVA_MPU6050_KEIL.axf" - 0 Error(s), 19 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
                 http://www.keil.com/pack/ARM.CMSIS.5.0.1.pack
-                ARM::CMSIS:CORE:5.0.1
+                ARM.CMSIS.5.0.1
                 CMSIS (Cortex Microcontroller Software Interface Standard)
    * Component: CORE Version: 5.0.1
 
 Package Vendor: Keil
                 http://www.keil.com/pack/Keil.TM4C_DFP.1.1.0.pack
-                Keil::Device:Startup:1.0.1
+                Keil.TM4C_DFP.1.1.0
                 Texas Instruments Tiva C Series Device Support and Examples
    * Component: Startup Version: 1.0.1
 
@@ -60,12 +96,12 @@ Package Vendor: Keil
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.0.1
-
    * Component: Keil::Device:Startup:1.0.1
       Include file:  Device\Include\TM4C123\TM4C123.h
       Source file:   Device\Source\ARM\startup_TM4C123.s
       Source file:   Device\Source\system_TM4C123.c
+
+   * Component: ARM::CMSIS:CORE:5.0.1
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
